syntax = "proto3";

package recommend;

option go_package = "/recommend";


service RecommendService {
  rpc LikePost(PostLikeOwners) returns (Status);
//   rpc GetPostLikeOwners(PostLikeOwners) returns (Post);
}

message Status {
    bool liked = 1;
}

message PostLikeOwners{
    string user_id = 1;
    int64 post_id = 2;
}
